Some more work on the meteorite, block code is done which wasn't hard, just need to work on the visual side of things.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -381,6 +381,7 @@
   "block.terramine.shadow_chest": "Shadow Chest",
   "block.terramine.piggy_bank": "Piggy Bank",
   "block.terramine.safe": "Safe",
+  "block.terramine.meteorite_ore": "Meteorite Ore",
   "block.terramine.redstone_stone": "Redstone Stone",
   "block.terramine.redstone_deepslate": "Redstone Deepslate",
   "block.terramine.instant_tnt": "Instant TNT",
