Added Hellstone ore and ingot stuff.
Block textures need to be done still, also need to get the ore to generate in the nether.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -88,6 +88,15 @@
   "item.terramine.black_lens": "Black Lens",
   "item.terramine.rotten_chunk": "Rotten Chunk",
   "item.terramine.vertebra": "Vertebra",
+  "item.terramine.raw_meteorite": "Raw Meteorite",
+  "item.terramine.meteorite_ingot": "Meteorite Ingot",
+  "item.terramine.raw_demonite": "Raw Demonite",
+  "item.terramine.demonite_ingot": "Demonite Ingot",
+  "item.terramine.raw_crimtane": "Raw Crimtane",
+  "item.terramine.crimtane_ingot": "Crimtane Ingot",
+  "item.terramine.raw_hellstone": "Raw Hellstone",
+  "item.terramine.raw_hellstone_hardened": "Raw Hardened Hellstone",
+  "item.terramine.hellstone_ingot": "Hellstone Ingot",
   "item.terramine.diving_helmet": "Diving Helmet",
   "item.terramine.diving_gear": "Diving Gear",
   "item.terramine.panic_necklace": "Panic Necklace",
@@ -231,15 +240,20 @@
   "item.terramine.crimson_leggings.tooltip": "2% increased damage",
   "item.terramine.crimson_boots.tooltip": "2% increased damage",
   "item.terramine.crimson_armor.setbonus": "Set Bonus: Greatly increased life regen",
+  "item.terramine.mana_crystal.tooltip": "Permanently increases maximum mana by 20",
+  "item.terramine.fallen_star.tooltip": "Disappears after the sunrise",
+  "item.terramine.fake_fallen_star.tooltip": "You shouldn't have this\nOnly used to delete after sunrise",
+  "item.terramine.rotten_chunk.tooltip": "'Looks tasty!'",
+  "item.terramine.meteorite_ingot.tooltip": "'Warm to the touch'",
+  "item.terramine.demonite_ingot.tooltip": "'Pulsing with dark energy'",
+  "item.terramine.raw_hellstone.tooltip": "'Obsidian not included'",
+  "item.terramine.raw_hellstone_hardened.tooltip": "'Raw Hellstone, now smeltable!'",
+  "item.terramine.hellstone_ingot.tooltip": "'Hot to the touch'",
   "item.terramine.diving_helmet.tooltip": "Greatly extends underwater breathing",
   "item.terramine.diving_gear.tooltip": "Grants the ability to swim better\nGreatly extends underwater breathing",
   "item.terramine.panic_necklace.tooltip": "Increases movement speed after taking damage",
   "item.terramine.flippers.tooltip": "Grants the ability to swim better",
   "item.terramine.obsidian_skull.tooltip": "Grants immunity to fire blocks",
-  "item.terramine.fallen_star.tooltip": "Disappears after the sunrise",
-  "item.terramine.fake_fallen_star.tooltip": "You shouldn't have this\nOnly used to delete after sunrise",
-  "item.terramine.rotten_chunk.tooltip": "'Looks tasty!'",
-  "item.terramine.mana_crystal.tooltip": "Permanently increases maximum mana by 20",
   "item.terramine.shoe_spikes.tooltip": "Allows the ability to slide down walls\nImproved ability if combined with Climbing Claws",
   "item.terramine.climbing_claws.tooltip": "Allows the ability to slide down walls\nImproved ability if combined with Shoe Spikes",
   "item.terramine.tiger_climbing_gear.tooltip": "Allows the ability to climb walls",
@@ -368,12 +382,6 @@
   "item.minecraft.splash_potion.effect.ironskin": "Splash Potion of Ironskin",
   "item.minecraft.lingering_potion.effect.ironskin": "Lingering Potion of Ironskin",
   "item.minecraft.tipped_arrow.effect.ironskin": "Arrow of Ironskin",
-  "item.terramine.raw_meteorite": "Raw Meteorite",
-  "item.terramine.meteorite_ingot": "Meteorite Ingot",
-  "item.terramine.raw_demonite": "Raw Demonite",
-  "item.terramine.demonite_ingot": "Demonite Ingot",
-  "item.terramine.raw_crimtane": "Raw Crimtane",
-  "item.terramine.crimtane_ingot": "Crimtane Ingot",
   "block.terramine.gold_chest": "Gold Chest",
   "block.terramine.trapped_gold_chest": "Trapped Gold Chest",
   "block.terramine.frozen_chest": "Frozen Chest",
@@ -390,6 +398,9 @@
   "block.terramine.meteorite_ore": "Meteorite Ore",
   "block.terramine.raw_meteorite_block": "Block of Raw Meteorite",
   "block.terramine.meteorite_block": "Block of Meteorite",
+  "block.terramine.hellstone_ore": "Hellstone Ore",
+  "block.terramine.raw_hellstone_block": "Block of Raw Hellstone",
+  "block.terramine.hellstone_block": "Block of Hellstone",
   "block.terramine.redstone_stone": "Redstone Stone",
   "block.terramine.redstone_deepslate": "Redstone Deepslate",
   "block.terramine.instant_tnt": "Instant TNT",
