--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -550,6 +550,8 @@
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[3]": "Doubling this value will (roughly) halve the chance a container contains an accessory",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[4]": "Setting this to 10000 will completely prevent terramine from spawning",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[5]": "When set to 0, every container that can contain terramine will contain an accessory",
+  "text.autoconfig.terramine.option.worldgen.hellstoneRarity": "Hellstone rarity",
+  "text.autoconfig.terramine.option.worldgen.hellstoneRarity.@Tooltip": "A higher number means less frequent generation",
   "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled": "Enable Evil Biomes",
   "text.autoconfig.terramine.option.worldgen.evilBiomeEnabled.@Tooltip": "Enables or Disables the Evil biomes from generating",
   "text.autoconfig.terramine.option.worldgen.forceCorruption": "Force Corruption Biomes",
