Improved ranger emblem. Mechanical Glove and Fire Gauntlet no longer increase ranged damage.
Don't know why I did the increased ranged damage the way i did but that was probably very early code, has an attribute now, so I can easily increase ranged damage from anywhere now.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -611,6 +611,7 @@
   "commands.setHardmode.fail": "Failed to set Hardmode to %s",
   "commands.getHardmode.pass": "Hardmode is %s",
   "commands.getHardmode.fail": "Failed to get Hardmode state",
+  "attribute.name.ranger_attack_damage": "Ranger Attack Damage",
   "attribute.name.magic_attack_damage": "Magic Attack Damage",
   "attribute.name.magic_attack_speed": "Magic Attack Speed",
   "death.attack.falling_star": "%1$s got disintegrated by a falling star",
