Changed a lot, forgot to write any of it down Most notable changes: dyes work, meteorites spawn, accessories can be hidden, and the player preview can now be rotated. Those are just what I remember but other changes are probably small.
Probably just going to update the mod to 1.19.4 and 1.20 and then release the update, maybe also create some vanity armors and add renderers to some accessories.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -1,10 +1,6 @@
 {
   "magic_mirror.fail": "No spawnpoint found",
   "stat.terramine.mana_used": "Mana Used",
-  "terramine.status.allenabled": "Effects & cosmetic",
-  "terramine.status.cosmeticonly": "Cosmetic only",
-  "terramine.status.effectsonly": "Effects only",
-  "terramine.status.toggletooltip": "(right click)",
   "terramine.ui.depth": "Depth",
   "terramine.ui.dps": "DPS",
   "terramine.ui.oreDetected": "Detected Nearby",
@@ -26,6 +22,7 @@
   "itemGroup.terramine.terramine_blocks": "TerraMine Blocks",
   "itemGroup.terramine.terramine_throwables": "TerraMine Throwables",
   "itemGroup.terramine.terramine_stuff": "TerraMine Misc",
+  "itemGroup.terramine.terramine_dyes": "TerraMine Dyes",
   "terramine.advancements.root.title": "TerraMine",
   "terramine.advancements.root.description": "Familiar yet different",
   "terramine.advancements.accessorise.title": "Accessorise",
@@ -48,6 +45,7 @@
   "terramine.advancements.the_crimson.description": "Find a Crimson biome",
   "terramine.advancements.chest_slayer.title": "Chest Slayer",
   "terramine.advancements.chest_slayer.description": "Kill a Mimic",
+  "event.terramine.meteoriteSpawn": "A meteorite has landed!",
   "entity.terramine.mimic": "Mimic",
   "entity.terramine.demon_eye": "Demon Eye",
   "entity.terramine.eater_of_souls": "Eater of Souls",
@@ -80,6 +78,16 @@
   "item.terramine.eater_of_souls_spawn_egg": "Eater of Souls Spawn Egg",
   "item.terramine.devourer_spawn_egg": "Devourer Spawn Egg",
   "item.terramine.crimera_spawn_egg": "Crimera Spawn Egg",
+  "item.terramine.red_dye": "Red Dye",
+  "item.terramine.green_dye": "Green Dye",
+  "item.terramine.blue_dye": "Blue Dye",
+  "item.terramine.yellow_dye": "Yellow Dye",
+  "item.terramine.orange_dye": "Orange Dye",
+  "item.terramine.purple_dye": "Purple Dye",
+  "item.terramine.pink_dye": "Pink Dye",
+  "item.terramine.brown_dye": "Brown Dye",
+  "item.terramine.gray_dye": "Gray Dye",
+  "item.terramine.black_dye": "Black Dye",
   "item.terramine.lens": "Lens",
   "item.terramine.black_lens": "Black Lens",
   "item.terramine.rotten_chunk": "Rotten Chunk",
@@ -102,6 +110,7 @@
   "item.terramine.fallen_star": "Fallen Star",
   "item.terramine.fake_fallen_star": "Fake Fallen Star",
   "item.terramine.mana_crystal": "Mana Crystal",
+  "item.terramine.demon_heart": "Demon Heart",
   "item.terramine.shoe_spikes": "Shoe Spikes",
   "item.terramine.climbing_claws": "Climbing Claws",
   "item.terramine.tiger_climbing_gear": "Tiger Climbing Gear",
@@ -263,6 +272,7 @@
   "item.terramine.molten_boots.tooltip": "7% increased melee speed",
   "item.terramine.molten_armor.setbonus": "Set Bonus: 10% extra melee damage,\nCannot be set on fire",
   "item.terramine.mana_crystal.tooltip": "Permanently increases maximum mana by 20",
+  "item.terramine.demon_heart.tooltip": "Permanently increases the number of accessory slots",
   "item.terramine.fallen_star.tooltip": "Disappears after the sunrise",
   "item.terramine.fake_fallen_star.tooltip": "You shouldn't have this\nOnly used to delete after sunrise",
   "item.terramine.rotten_chunk.tooltip": "'Looks tasty!'",
@@ -539,6 +549,7 @@
   "terramine.subtitles.item.whoopee_cushion.fart": "Fart",
   "terramine.subtitles.item.magic_mirror.use": "Magic Mirror Used",
   "terramine.subtitles.item.mana_crystal.use": "Mana Crystal Used",
+  "terramine.subtitles.item.demon_heart.use": "Demon Heart Consumed",
   "terramine.subtitles.item.magicmissile.use": "Magic Missile Cast",
   "terramine.subtitles.mana.full": "Mana Full",
   "terramine.subtitles.fallingstar.fall": "Star Falling",
@@ -565,6 +576,20 @@
   "text.autoconfig.terramine.option.general.fallingStarRarity": "Falling Star Rarity",
   "text.autoconfig.terramine.option.general.fallingStarRarity.@Tooltip[0]": "How rarely Falling Stars will fall",
   "text.autoconfig.terramine.option.general.fallingStarRarity.@Tooltip[1]": "The higher the value the more often stars will fall",
+  "text.autoconfig.terramine.option.general.disableMeteorites": "Disable Meteorites",
+  "text.autoconfig.terramine.option.general.disableMeteorites.@Tooltip": "Meteorites will no longer fall onto the world",
+  "text.autoconfig.terramine.option.general.meteoriteRarity": "Falling Star Rarity",
+  "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[0]": "How rarely Meteorites will fall onto the world",
+  "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[1]": "The higher the value the more often meteorites will fall",
+  "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[2]": "(Meteorites still only spawn at midnight)",
+  "text.autoconfig.terramine.option.general.disableHardcoreExtraAccessory": "Disable extra Hardcore accessory slot",
+  "text.autoconfig.terramine.option.general.disableHardcoreExtraAccessory.@Tooltip[0]": "Disables the extra accessory slot given to the player from playing on Hardcore difficulty",
+  "text.autoconfig.terramine.option.general.disableHardcoreExtraAccessory.@Tooltip[1]": "(if the slot has already been added it will be removed)",
+  "text.autoconfig.terramine.option.general.disableDemonHeart": "Disable Demon Heart",
+  "text.autoconfig.terramine.option.general.disableDemonHeart.@Tooltip": "Disables the functionality of the Demon Heart, item can still be obtained",
+  "text.autoconfig.terramine.option.general.setExtraAccessorySlots": "Set extra accessory slots",
+  "text.autoconfig.terramine.option.general.setExtraAccessorySlots.@Tooltip[0]": "Override how many extra accessory slots the player has",
+  "text.autoconfig.terramine.option.general.setExtraAccessorySlots.@Tooltip[1]": "(the Demon Heart will still add a slot unless disabled)",
   "text.autoconfig.terramine.category.worldgen": "World Gen",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity": "Accessory rarity",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[0]": "Affects how common Accessories are (does not affect mimics)",
