Added familiar set. Added top hat.
Improved chance of meteorite spawning (also limited meteorite to one per night so if you set time to midnight and have time set to not move then it wont just spam meteorites).

Fixed Accessories working in creative mode.

Various other very small things.

Going to pull these changes into the 1.18 branch and get that all working, then going to create a 1.20 branch and get that working, then update time.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -247,6 +247,11 @@
   "item.terramine.molten_chestplate": "Molten Chestplate",
   "item.terramine.molten_leggings": "Molten Leggings",
   "item.terramine.molten_boots": "Molten Boots",
+  "item.terramine.familiar_wig": "Familiar Wig",
+  "item.terramine.familiar_shirt": "Familiar Shirt",
+  "item.terramine.familiar_pants": "Familiar Pants",
+  "item.terramine.familiar_shoes": "Familiar Shoes",
+  "item.terramine.top_hat": "Top Hat",
   "item.terramine.shadow_helmet.tooltip": "7% increased melee speed",
   "item.terramine.shadow_chestplate.tooltip": "7% increased melee speed",
   "item.terramine.shadow_leggings.tooltip": "7% increased melee speed",
@@ -578,7 +583,7 @@
   "text.autoconfig.terramine.option.general.fallingStarRarity.@Tooltip[1]": "The higher the value the more often stars will fall",
   "text.autoconfig.terramine.option.general.disableMeteorites": "Disable Meteorites",
   "text.autoconfig.terramine.option.general.disableMeteorites.@Tooltip": "Meteorites will no longer fall onto the world",
-  "text.autoconfig.terramine.option.general.meteoriteRarity": "Falling Star Rarity",
+  "text.autoconfig.terramine.option.general.meteoriteRarity": "Meteorite Rarity",
   "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[0]": "How rarely Meteorites will fall onto the world",
   "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[1]": "The higher the value the more often meteorites will fall",
   "text.autoconfig.terramine.option.general.meteoriteRarity.@Tooltip[2]": "(Meteorites still only spawn at midnight)",
