Fixed world generation stuff.
I added some datagen to fix this, those json files are annoying as hell.
I fixed some other stuff too, everything should be working nicely now.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -547,6 +547,11 @@
   "effect.terramine.ironskin": "Ironskin",
   "effect.terramine.merfolk": "Merfolk",
   "effect.terramine.werewolf": "Werewolf",
+  "trim_material.terramine.demonite": "Demonite Material",
+  "trim_material.terramine.crimtane": "Crimtane Material",
+  "trim_material.terramine.meteorite": "Meteorite Material",
+  "trim_material.terramine.hellstone": "Hellstone Material",
+  "trim_material.terramine.fallen_star": "Falling Star Material",
   "terramine.subtitles.entity.mimic.close": "Mimic closes",
   "terramine.subtitles.entity.mimic.open": "Mimic hops",
   "terramine.subtitles.entity.mimic.hurt": "Mimic hurts",
