Added teams system in Accessory menu. Added armor value to Accessory menu. Fixed hover highlighting on accessory visibility buttons (player rotate arrows still have this issue because mojang not big brain, I'll make my own widget to fix it).
Currently, teams don't do anything, but the system is there.
I do need to add support for FTB Teams once that's updated for 1.20.1 (will use that system instead of my one).
Next is getting the test boss to only target, be able to attack, and only be attacked by people on the same team.
Then I can create a test spawn item and make it so the team the boss checks is that of the one that spawned the boss.
Also, probably add a check on boss spawn to find all players on the same team within a certain range.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -566,14 +566,6 @@
   "terramine.subtitles.fallingstar.crash": "Star Crashes",
   "text.autoconfig.terramine.title": "TerraMine Configuration",
   "text.autoconfig.terramine.category.general": "General",
-  "text.autoconfig.terramine.option.general.showFirstPersonGloves": "Show first person gloves",
-  "text.autoconfig.terramine.option.general.showFirstPersonGloves.@Tooltip[0]": "Whether gloves should display on",
-  "text.autoconfig.terramine.option.general.showFirstPersonGloves.@Tooltip[1]": "the player's hand in first person",
-  "text.autoconfig.terramine.option.general.showTooltips": "Show tooltips",
-  "text.autoconfig.terramine.option.general.showTooltips.@Tooltip[0]": "Whether terramine should have a tooltip explaining their",
-  "text.autoconfig.terramine.option.general.showTooltips.@Tooltip[1]": "effect. These can still be found in REI when disabled",
-  "text.autoconfig.terramine.option.general.stopwatchMPH": "Stopwatch MPH",
-  "text.autoconfig.terramine.option.general.stopwatchMPH.@Tooltip": "Sets the Stopwatch to use mph instead of km/h",
   "text.autoconfig.terramine.option.general.disableEvilSpread": "Disable Evil Biome Spread",
   "text.autoconfig.terramine.option.general.disableEvilSpread.@Tooltip[0]": "Disables the spread of the worlds evil biome",
   "text.autoconfig.terramine.option.general.disableEvilSpread.@Tooltip[1]": "Evil type blocks will no longer spread",
@@ -600,6 +592,18 @@
   "text.autoconfig.terramine.option.general.setExtraAccessorySlots": "Set extra accessory slots",
   "text.autoconfig.terramine.option.general.setExtraAccessorySlots.@Tooltip[0]": "Override how many extra accessory slots the player has",
   "text.autoconfig.terramine.option.general.setExtraAccessorySlots.@Tooltip[1]": "(the Demon Heart will still add a slot unless disabled)",
+  "text.autoconfig.terramine.category.client": "Client",
+  "text.autoconfig.terramine.option.client.showFirstPersonGloves": "Show first person gloves",
+  "text.autoconfig.terramine.option.client.showFirstPersonGloves.@Tooltip[0]": "Whether gloves should display on",
+  "text.autoconfig.terramine.option.client.showFirstPersonGloves.@Tooltip[1]": "the player's hand in first person",
+  "text.autoconfig.terramine.option.client.showTooltips": "Show tooltips",
+  "text.autoconfig.terramine.option.client.showTooltips.@Tooltip[0]": "Whether terramine should have a tooltip explaining their",
+  "text.autoconfig.terramine.option.client.showTooltips.@Tooltip[1]": "effect. These can still be found in REI when disabled",
+  "text.autoconfig.terramine.option.client.stopwatchMPH": "Stopwatch MPH",
+  "text.autoconfig.terramine.option.client.stopwatchMPH.@Tooltip": "Sets the Stopwatch to use mph instead of km/h",
+  "text.autoconfig.terramine.option.client.rememberTeam": "Remember Team",
+  "text.autoconfig.terramine.option.client.rememberTeam.@Tooltip[0]": "If the game should remember your selected team between rejoining a world",
+  "text.autoconfig.terramine.option.client.rememberTeam.@Tooltip[1]": "If this is false, will function the same as Terraria",
   "text.autoconfig.terramine.category.worldgen": "World Gen",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity": "Accessory rarity",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[0]": "Affects how common Accessories are (does not affect mimics)",
