Added some teams stuff for bosses (not much, but it's a start). Added boss summoning item (Just Eye of Cthulhu, the others will be added as needed). Added Treasure Bags (Very WIP, haven't actually started yet, but I have an idea for the best way to do it).
Treasure Bags should be finished pretty quickly, there isn't much to them.
After that, I'll try work on the Eye of Cthulhu.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -1,5 +1,4 @@
 {
-  "magic_mirror.fail": "No spawnpoint found",
   "stat.terramine.mana_used": "Mana Used",
   "terramine.ui.depth": "Depth",
   "terramine.ui.dps": "DPS",
@@ -16,6 +15,8 @@
   "terramine.ui.waxingGibbousMoon": "Waxing Gibbous",
   "terramine.ui.unknownMoonPhase": "Unknown Phase",
   "terramine.ui.speed": "Speed",
+  "text.magic_mirror.fail": "No spawnpoint found",
+  "text.boss_summon.fail": "Monsters only come out at night...",
   "itemGroup.terramine.terramine_equipment": "TerraMine Equipment",
   "itemGroup.terramine.terramine_armor": "TerraMine Armor",
   "itemGroup.terramine.terramine_accessories": "TerraMine Accessories",
@@ -111,6 +112,9 @@
   "item.terramine.fake_fallen_star": "Fake Fallen Star",
   "item.terramine.mana_crystal": "Mana Crystal",
   "item.terramine.demon_heart": "Demon Heart",
+  "item.terramine.suspicious_looking_eye": "Suspicious Looking Eye",
+  "item.terramine.eye_of_cthulhu_treasure_bag": "Treasure Bag (Eye of Cthulhu)",
+  "item.terramine.eater_of_worlds_treasure_bag": "Treasure Bag (Eater of Worlds)",
   "item.terramine.shoe_spikes": "Shoe Spikes",
   "item.terramine.climbing_claws": "Climbing Claws",
   "item.terramine.tiger_climbing_gear": "Tiger Climbing Gear",
@@ -278,6 +282,7 @@
   "item.terramine.molten_armor.setbonus": "Set Bonus: 10% extra melee damage,\nCannot be set on fire",
   "item.terramine.mana_crystal.tooltip": "Permanently increases maximum mana by 20",
   "item.terramine.demon_heart.tooltip": "Permanently increases the number of accessory slots",
+  "item.terramine.suspicious_looking_eye.tooltip": "Summons the Eye of Cthulhu",
   "item.terramine.fallen_star.tooltip": "Disappears after the sunrise",
   "item.terramine.fake_fallen_star.tooltip": "You shouldn't have this\nOnly used to delete after sunrise",
   "item.terramine.rotten_chunk.tooltip": "'Looks tasty!'",
