--- a/src/main/resources/assets/terramine/lang/ko_kr.json
+++ b/src/main/resources/assets/terramine/lang/ko_kr.json
@@ -1,5 +1,4 @@
 {
-  "magic_mirror.fail": "스폰 포인트를 찾을 수 없음",
   "stat.terramine.mana_used": "사용된 마나",
   "terramine.status.allenabled": "효과 & 치장",
   "terramine.status.cosmeticonly": "치장만 적용",
@@ -20,6 +19,7 @@
   "terramine.ui.waxingGibbousMoon": "상현달",
   "terramine.ui.unknownMoonPhase": "모양 알 수 없음",
   "terramine.ui.speed": "속도",
+  "text.magic_mirror.fail": "스폰 포인트를 찾을 수 없음",
   "itemGroup.terramine.terramine_equipment": "TerraMine 장비",
   "itemGroup.terramine.terramine_armor": "TerraMine 갑옷",
   "itemGroup.terramine.terramine_accessories": "TerraMine 액세서리",
