Added Evil Seeds. Replaced Wheat Seeds in Eye of Cthulhu loot table with Evil Seeds. Removed old Artifacts language entry.
Going to add some custom arrows next, so I can add Unholy Arrows to the loot table.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -131,8 +131,8 @@
   "item.terramine.umbrella": "Umbrella",
   "item.terramine.cobalt_shield": "Cobalt Shield",
   "item.terramine.obsidian_shield": "Obsidian Shield",
-  "item.terramine.everlasting_beef": "Everlasting Beef",
-  "item.terramine.eternal_steak": "Eternal Steak",
+  "item.terramine.corrupt_seeds": "Corrupt Seeds",
+  "item.terramine.crimson_seeds": "Crimson Seeds",
   "item.terramine.magic_mirror": "Magic Mirror",
   "item.terramine.magic_missile": "Magic Missile",
   "item.terramine.flamelash": "Flamelash",
